Styling, doc update.

--- a/tester-ui/tester.html
+++ b/tester-ui/tester.html
@@ -4,9 +4,9 @@
 <title>productws demo tester</title>
 <style>
 	html {display: table; margin: auto;}
-	body {display: table-cell; font-family: Arial; color:#555;}
+	body {display: table-cell; font-family: Arial; color: #666;}
 	button {width:120px; margin:3px 0px 3px 0px;}
-	textarea {width:600px; height:80px;}
+	textarea {width:750px; height:60px; color: #222;}
 	input {display: table-cell; width:100%}
 	code {color: green; background: #eee; padding: 3px;}
 	h1 {text-align:center;color:#222}
