Renamed tester-ui to html-tester.

--- a/html-tester/tester.html
+++ b/html-tester/tester.html
@@ -17,8 +17,8 @@
 <body>
 	<h1>productws demo tester</h1>
 	<div id="content">
-		Starting tester application...<br> If this text does not
-		disappear, the React app does not start properly.
+		Loading tester application...<br> If this text does not
+		disappear shortly, the React app didn't start properly.
 	</div>
 
 	<script src="https://npmcdn.com/react@15.3.0/dist/react.js"></script>
