--- a/html-tester/tester.html
+++ b/html-tester/tester.html
@@ -12,7 +12,7 @@
 	code {color: green; background: #eee; padding: 3px;}
 	h1 {text-align:center;color:#222}
 	h2 {font-size:1.3em; margin:10px 0px 5px 0px;color:black;}
-	.footer {background: #ddd; padding: 6px 10px 6px 10px; border-top: 1px solid #aaa; font-style: italic; font-size: 0.8em; margin-top:3px; text-align:center;}
+	.footer {background: #eee; padding: 6px 10px 6px 10px; border-top: 1px solid #aaa; font-style: italic; font-size: 0.8em; margin-top:3px; text-align:center;}
 </style>
 </head>
 
@@ -33,6 +33,9 @@
 <!-- 	<script src="jquery.min.js"></script> -->
 
 	<script type="text/babel">
+
+// Enable cross domain request (IE, Edge needs it!)
+$.support.cors = true;
 
 function errorObj(xhr, status, err) {
 	return {response: "ERROR: " + xhr.status + " " + err.toString() + "\n" + xhr.responseText
